# urbandt

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: reproduce_twekkelerveld.py
src/urbandt/: __init__.py  cli.py  config.py  ecology.py  energy.py  io.py  privacy.py  solar.py  study_area.py
src/urbandt/viz/: __init__.py  dashboard.py
tests/: test_smoke.py
