[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urbandt"
version = "0.1.0"
description = "Urban Digital Twin toolkit: reproducible energy and ecology indicators for neighbourhood-scale dashboards. Released alongside the Twekkelerveld MSc thesis at ITC, University of Twente."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Rakib Athid", email = "rakubunathid@gmail.com" }
]
maintainers = [
  { name = "Rakib Athid", email = "rakubunathid@gmail.com" }
]
keywords = [
  "digital twin", "urban", "geospatial", "energy", "ecology",
  "BAG", "Enexis", "CBS", "Cesium", "PV", "UHI"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "geopandas>=0.13",
  "pandas>=2.0",
  "numpy>=1.24",
  "shapely>=2.0",
  "fiona>=1.9",
  "pyproj>=3.5",
  "openpyxl>=3.1",
  "jinja2>=3.1",
  "rasterio>=1.3",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
viz = ["folium>=0.14", "contextily>=1.3"]
dev = ["pytest>=7", "ruff>=0.1", "pytest-cov>=4"]

[project.scripts]
urbandt = "urbandt.cli:main"

[project.urls]
Homepage      = "https://github.com/RakibAthid/urbandt"
Repository    = "https://github.com/RakibAthid/urbandt"
Issues        = "https://github.com/RakibAthid/urbandt/issues"
Documentation = "https://github.com/RakibAthid/urbandt#readme"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"urbandt.viz" = ["templates/*.html.j2", "templates/*.js"]
